--- a/src/admin.html
+++ b/src/admin.html
@@ -12,18 +12,18 @@
         <ul class="panel__excursions excursions">
             <li data-id="1" class="excursions__item excursions__item--prototype">
                 <header class="excursions__header">
-                    <h2 class="excursions__title">Ogrodzieniec</h2>
-                    <p class="excursions__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam quam laboriosam quaerat temporibus dicta vitae maxime! Nemo, nobis veritatis?</p>
+                    <h2 class="excursions__title editable">Ogrodzieniec</h2>
+                    <p class="excursions__description editable">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam quam laboriosam quaerat temporibus dicta vitae maxime! Nemo, nobis veritatis?</p>
                 </header>
                 <form class="excursions__form">
                     <div class="excursions__field">
                         <label class="excursions__field-name">
-                            Dorosły: <strong>99</strong>PLN
+                            Dorosły: <strong class="excursions__field-price-adult editable">99</strong>PLN
                         </label>
                     </div>
                     <div class="excursions__field">
                         <label class="excursions__field-name">
-                            Dziecko: <strong>50</strong>PLN
+                            Dziecko: <strong class="excursions__field-price-child editable">50</strong>PLN
                         </label>
                     </div>
                     <div class="excursions__field excursions__field--submit">
