--- a/src/index.html
+++ b/src/index.html
@@ -21,37 +21,12 @@
                     <form class="excursions__form">
                         <div class="excursions__field">
                             <label class="excursions__field-name">
-                                Dorosły: <span class='excursions__price'>99</span>PLN x <input class="excursions__field-input" name="adults" />
+                                Dorosły: <span class='excursions__price-adult'>99</span>PLN x <input class="excursions__field-input" name="adults" />
                             </label>
                         </div>
                         <div class="excursions__field">
                             <label class="excursions__field-name">
-                                Dziecko: <span class='excursions__price'>50</span>PLN x <input class="excursions__field-input" name="children" />
-                            </label>
-                        </div>
-                        <div class="excursions__field excursions__field--submit">
-                            <input 
-                                class="excursions__field-input excursions__field-input--submit" 
-                                value="dodaj do zamówinia"
-                                type="submit"
-                            />
-                        </div>
-                    </form>
-                </li>
-                <li class="excursions__item">
-                    <header class="excursions__header">
-                        <h2 class="excursions__title">Warszawa</h2>
-                        <p class="excursions__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </header>
-                    <form class="excursions__form">
-                        <div class="excursions__field">
-                            <label class="excursions__field-name">
-                                Dorosły: <span class='excursions__price'>200</span>PLN x <input class="excursions__field-input" name="adults" />
-                            </label>
-                        </div>
-                        <div class="excursions__field">
-                            <label class="excursions__field-name">
-                                Dziecko: <span class='excursions__price'>120</span>PLN x <input class="excursions__field-input" name="children" />
+                                Dziecko: <span class='excursions__price-child'>50</span>PLN x <input class="excursions__field-input" name="children" />
                             </label>
                         </div>
                         <div class="excursions__field excursions__field--submit">
